// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StreamImpersonator does not impersonate on invalid token 1`] = `
"POST / HTTP/1.1
Accept: application/json
Authorization: Bearer invalid.token.is
Content-Type: application/json
Content-Length: 11

hello world"
`;

exports[`StreamImpersonator handles body separator splitted to separate chunks 1`] = `
"GET / HTTP/1.1
Accept: application/json
Content-Type: application/json
Authorization: Bearer service-account-token
Impersonate-User: johndoe

"
`;

exports[`StreamImpersonator handles http request pipelining 1`] = `
"POST /foo HTTP/1.1
Accept: application/json
Content-Type: application/json
Content-Length: 3
Authorization: Bearer service-account-token
Impersonate-User: johndoe

barGET / HTTP/1.1
Accept: application/json
Content-Type: application/json
Authorization: Bearer service-account-token
Impersonate-User: johndoe

GET /version HTTP/1.1
Accept: application/json
Content-Type: application/json
Authorization: Bearer service-account-token
Impersonate-User: johndoe

POST /foo HTTP/1.1
Accept: application/json
Content-Type: application/json
Authorization: Bearer service-account-token
Impersonate-User: johndoe

barGET /foo HTTP/1.1
Accept: application/json
Content-Type: application/json
Authorization: Bearer service-account-token
Impersonate-User: johndoe

"
`;

exports[`StreamImpersonator handles newline splitted to separate chunks 1`] = `
"GET / HTTP/1.1
Accept: application/json
Content-Type: application/json
Authorization: Bearer service-account-token
Impersonate-User: johndoe

"
`;

exports[`StreamImpersonator handles non GET requests 1`] = `
"POST /apis/authorization.k8s.io/v1/selfsubjectaccessreviews HTTP/1.1
Accept: application/json
Content-Type: application/json
Content-Length: 324
Authorization: Bearer service-account-token
Impersonate-User: johndoe

{\\"apiVersion\\":\\"authorization.k8s.io/v1\\",\\"kind\\":\\"SelfSubjectAccessReview\\",\\"spec\\":{\\"resourceAttributes\\":{\\"namespace\\":\\"kube-system\\",\\"resource\\":\\"*\\",\\"verb\\":\\"create\\"}}}{\\"apiVersion\\":\\"authorization.k8s.io/v1\\",\\"kind\\":\\"SelfSubjectAccessReview\\",\\"spec\\":{\\"resourceAttributes\\":{\\"namespace\\":\\"kube-system\\",\\"resource\\":\\"*\\",\\"verb\\":\\"create\\"}}}"
`;

exports[`StreamImpersonator handles port-forward upgrade 1`] = `
"POST /apis/authorization.k8s.io/v1/selfsubjectaccessreviews HTTP/1.1
Accept: application/json
Content-Type: application/json
Content-Length: 0
Connection: Upgrade
Authorization: Bearer service-account-token
Impersonate-User: johndoe

GET /version HTTP/1.1
Accept: application/json
Content-Type: application/json
Authorization: Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c

POST /foo HTTP/1.1
Accept: application/json
Content-Type: application/json
Authorization: Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c

barGET /foo HTTP/1.1
Accept: application/json
Content-Type: application/json
Authorization: Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c

"
`;

exports[`StreamImpersonator impersonates groups on valid jwt token 1`] = `
"GET / HTTP/1.1
Accept: application/json
Content-Type: application/json
Authorization: Bearer service-account-token
Impersonate-User: johndoe
Impersonate-Group: dev
Impersonate-Group: ops

"
`;

exports[`StreamImpersonator impersonates on valid jwt token 1`] = `
"GET / HTTP/1.1
Accept: application/json
Content-Type: application/json
Authorization: Bearer service-account-token
Impersonate-User: johndoe

"
`;
